--- a/deployment.yaml
+++ b/deployment.yaml
@@ -72,7 +72,7 @@ spec:
         - name: proxy
           image: quay.io/ukhomeofficedigital/nginx-proxy-proxy-redirect
           securityContext:
-            runAsNonRoot: true
+            allowPrivilegeEscalation: true
             runAsUser: 1000
           env:
             - name: PROXY_SERVICE_HOST
